# RRG-Controller

./: .gitignore  CMakeLists.txt  build.ps1  build.sh  create_executable.ps1  create_executable.sh  requirements.txt
.github/workflows/: build.yaml  codeql.yml  linter.yaml
c_api/: CMakeLists.txt  rrg_live_test.c  rrg_test.c
c_api/include/: rrg.h  rrg_constants.h  rrg_errors.h  rrg_preprocessor_macros.h  utils.h
c_api/include/relay/: relay.h  relay_constants.h  relay_errors.h  relay_preprocessor_macros.h
c_api/include/rrg/: rrg.h  rrg_constants.h  rrg_errors.h  rrg_preprocessor_macros.h
c_api/src/: CMakeLists.txt  rrg.c  utils.c
c_api/src/relay/: CMakeLists.txt  relay.c
c_api/src/rrg/: CMakeLists.txt  rrg.c
ui/: __init__.py  main.py
ui/config/: relay.yaml  rrg.yaml
ui/gui/: __init__.py  rrg_control_window.py
ui/rrg/: __init__.py  rrg_controller.py  rrg_wrapper.py
ui/src/: __init__.py
ui/src/config/: __init__.py  config_loader.py
ui/src/relay/: __init__.py  relay_controller.py  relay_wrapper.py
ui/src/rrg/: __init__.py  rrg_controller.py  rrg_live_test.py  rrg_wrapper.py
ui/windows/: __init__.py  rrg_control_window.py
